--- a/.github.to.move/workflows/action/Dockerfile
+++ b/.github.to.move/workflows/action/Dockerfile
@@ -1,1 +1,1 @@
-FROM docker.pkg.github.com/github/codeql-learninglab-actions/<course-package>
+FROM docker.pkg.github.com/github/codeql-learninglab-actions/courses-cpp-uboot
