--- a/.github/workflows/action/Dockerfile
+++ b/.github/workflows/action/Dockerfile
@@ -1,1 +1,1 @@
-FROM docker.pkg.github.com/github/codeql-learninglab-actions/courses-cpp-uboot
+FROM docker.pkg.github.com/github/codeql-learninglab-actions/courses-cpp-uboot:v1.0.0
